disabled trueskill sigma display, bug fixes

--- a/app/templates/head_to_head.html
+++ b/app/templates/head_to_head.html
@@ -60,40 +60,35 @@
     <div class="panel-body">
     <table class="table bootstrap-datatable">
       <thead>
-        <tr>
-          <th class="col-sm-3 text-center"><b>Total Sets Played: {{user1_set_win_count + user2_set_win_count}}</b></th>
-          <th class="col-sm-3 text-center"><b>Total Matches Played: {{h2h_matches_played|length + user1_score_matches_won +  user2_score_matches_won}}</b></th>
-        </tr>
+        <th class="col-sm-4 text-center">{{user1.tag}}</th>
+        <th class="col-sm-4 text-center">Region</th>
+        <th class="col-sm-4 text-center">{{user2.tag}}</th>
       </thead>
 
       <tbody>
-        <tr>
-          <!-- Bold text for User with the winning record -->
-          {% if user1_set_win_count > user2_set_win_count %}
-            <td class="col-sm-3 text-center success">
-              <b>{{tag1}}</b> [{{user1_set_win_count}}-{{user2_set_win_count}}] {{tag2}}
-          {% elif user1_set_win_count == user2_set_win_count %}
-            <td class="col-sm-3 text-center warning">
-              <b>{{tag1}}</b> [{{user1_set_win_count}}-{{user2_set_win_count}}] <b>{{tag2}}</b>
-          {% else %}
-            <td class="col-sm-3 text-center danger">
-              {{tag1}} [{{user1_set_win_count}}-{{user2_set_win_count}}] <b>{{tag2}}</b>
-          {% endif %}
-          </td>
-          
-
-          {% if user1_match_win_count + user1_score_matches_won > user2_match_win_count + user2_score_matches_won %}
-            <td class="col-sm-3 text-center success">
-              <b>{{tag1}}</b> [{{user1_match_win_count + user1_score_matches_won}}-{{user2_match_win_count + user2_score_matches_won}}] {{tag2}}
-          {% elif user1_match_win_count + user1_score_matches_won == user2_match_win_count + user2_score_matches_won %}
-            <td class="col-sm-3 text-center warning">
-              <b>{{tag1}}</b> [{{user1_match_win_count + user1_score_matches_won}}-{{user2_match_win_count + user2_score_matches_won}}] <b>{{tag2}}</b>
-          {% else %}
-            <td class="col-sm-3 text-center danger">
-              {{tag1}} [{{user1_match_win_count + user1_score_matches_won}}-{{user2_match_win_count + user2_score_matches_won}}] <b>{{tag2}}</b>
+        {% if user1.region == user2.region %}
+          {% for i in range(user1.trueskills|length) %}
+            <!-- Establish row colors based on trueskill comparisons -->
+            {% if user1.trueskills[i].mu>user2.trueskills[i].mu %}
+              <tr class="success">
+            {% elif user1.trueskills[i].mu==user2.trueskills[i].mu %}
+              <tr class="warning">
+            {% else %}
+              <tr class="danger">
             {% endif %}
-          </td>
-        </tr>
+
+            <th class="col-sm-4 text-center"><b>Rating: {{user1.trueskills[i].mu|round(4, 'common')}} <!--, σ: {{user1.trueskills[i].sigma|round(4, 'common')}}--> </b></th>
+            <th class="col-sm-4 text-center"><b>{{user1.trueskills[i].region}}</b></th>
+            <th class="col-sm-4 text-center"><b>Rating: {{user2.trueskills[i].mu|round(4, 'common')}} <!--, σ {{user2.trueskills[i].sigma|round(4, 'common')}}--> </b></th>
+          </tr>
+          {% endfor %}
+        {% else %}
+          <tr>
+            <th class="col-sm-4 text-center"><b>Rating: {{user1.trueskills[0].mu|round(4, 'common')}} <!--, σ: {{user1.trueskills[0].sigma|round(4, 'common')}}--> </b></th>
+            <th class="col-sm-4 text-center"><b>Global</b></th>
+            <th class="col-sm-4 text-center"><b>Rating: {{user2.trueskills[0].mu|round(4, 'common')}} <!--, σ: {{user2.trueskills[0].sigma|round(4, 'common')}}--></b></th>
+          </tr>
+        {% endif %}
 
           <!-- In current version of Smashstats, no Match info available
           <td>Battlefield: {{ h2h_stages_played["Battlefield"]|length }}</td>
@@ -129,48 +124,6 @@
       </table>
       </div>
     </div>
-
-    <div class="panel panel-default">
-    <div class="panel-heading">
-      <h2><b>TrueSkill By Region</b></h2>
-    </div>
-    <div class="panel-body">
-      <table class="table bootstrap-datatable table-striped table-hover">
-        <thead>
-          <th class="col-sm-4 text-center">{{user1.tag}}</th>
-          <th class="col-sm-4 text-center">Region</th>
-          <th class="col-sm-4 text-center">{{user2.tag}}</th>
-        </thead>
-
-        <tbody>
-        {% if user1.region == user2.region %}
-          {% for i in range(user1.trueskills|length) %}
-            <!-- Establish row colors based on trueskill comparisons -->
-            {% if user1.trueskills[i].mu>user2.trueskills[i].mu %}
-              <tr class="success">
-            {% elif user1.trueskills[i].mu==user2.trueskills[i].mu %}
-              <tr class="warning">
-            {% else %}
-              <tr class="danger">
-            {% endif %}
-
-            <th class="col-sm-4 text-center"><b>μ: {{user1.trueskills[i].mu|round(4, 'common')}}, σ: {{user1.trueskills[i].sigma|round(4, 'common')}}</b></th>
-            <th class="col-sm-4 text-center"><b>{{user1.trueskills[i].region}}</b></th>
-            <th class="col-sm-4 text-center"><b>μ: {{user2.trueskills[i].mu|round(4, 'common')}}, σ {{user2.trueskills[i].sigma|round(4, 'common')}}</b></th>
-          </tr>
-          {% endfor %}
-        {% else %}
-          <tr>
-            <th class="col-sm-4 text-center"><b>MU: {{user1.trueskills[0].mu|round(4, 'common')}} | SIGMA: {{user1.trueskills[i].sigma|round(4, 'common')}}</b></th>
-            <th class="col-sm-4 text-center"><b>Global</b></th>
-            <th class="col-sm-4 text-center"><b>MU: {{user2.trueskills[0].mu|round(4, 'common')}} | SIGMA: {{user2.trueskills[i].sigma|round(4, 'common')}}</b></th>
-          </tr>
-        {% endif %}
-        </tbody>
-      </table>
-    </div>
-  </div>
-
 
     <div class="panel panel-default">
     <div class="panel-heading">
@@ -222,7 +175,7 @@
     <table class="table bootstrap-datatable table-condensed table-striped table-hover">
       <thead>
         <tr>
-          <h4 class="col-sm-12 text-center">Total Sets Played: <b>{{user1_set_win_count + user2_set_win_count}} |
+          <h4 class="col-sm-12 text-center">Total Sets Played: <b>{{user1_set_win_count + user2_set_win_count}} |</b>
             {% if user1_set_win_count >= user2_set_win_count %}
               <b>{{tag1}}</b> [{{user1_set_win_count}}-{{user2_set_win_count}}] {{tag2}}
             {% elif user1_set_win_count == user2_set_win_count %}
@@ -231,6 +184,15 @@
               {{tag1}} [{{user1_set_win_count}}-{{user2_set_win_count}}] <b>{{tag2}}</b>
             {% endif %}
           </h4>
+
+          <h4 class="text-center">Total Matches Played: <b>{{h2h_matches_played|length + user1_score_matches_won +  user2_score_matches_won}}</b> | 
+            {% if user1_match_win_count + user1_score_matches_won > user2_match_win_count + user2_score_matches_won %}
+              <b>{{tag1}}</b> [{{user1_match_win_count + user1_score_matches_won}}-{{user2_match_win_count + user2_score_matches_won}}] {{tag2}}</h4>
+            {% elif user1_match_win_count + user1_score_matches_won == user2_match_win_count + user2_score_matches_won %}
+              <b>{{tag1}}</b> [{{user1_match_win_count + user1_score_matches_won}}-{{user2_match_win_count + user2_score_matches_won}}] <b>{{tag2}}</b>
+            {% else %}
+              {{tag1}} [{{user1_match_win_count + user1_score_matches_won}}-{{user2_match_win_count + user2_score_matches_won}}] <b>{{tag2}}</b>
+            {% endif %}
           <th></th>
           <th></th>
           <th></th>
