--- a/app/templates/character.html
+++ b/app/templates/character.html
@@ -29,7 +29,7 @@
   <!-- Table for Users who main character -->
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h2><b>Users who main {{character}}</b></h2>
+      <h2><b>{{g.region}} Users who main {{character}}</b></h2>
     </div>
 
     <div class="panel-body">
@@ -60,7 +60,7 @@
   <!-- Table for Users who secondary character -->
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h2><b>Users who secondary {{character}}</b></h3>
+      <h2><b>{{g.region}} Users who secondary {{character}}</b></h3>
     </div>
 
     <div class="panel-body">
