--- a/app/templates/user_display_head.html
+++ b/app/templates/user_display_head.html
@@ -2,7 +2,8 @@
 <tr>
   <th class="text-center"><h4><b>User</b></h4></th>
 	<th class="text-center"><h4><b>Region</b></h4></th>
-	<th class="text-center">
+	<th class="text-center"><h4><b>Main</b></h4></th>
+	<!-- Disable form to select sort by Main
 	{% if form %}
 		<form class="navbar-form" action="{{url_for('browse_users')}}" name="CharacterFilter">
 	    <h4><b>{{form.character_name(class="form-control", onchange="this.form.submit()")}}</b></h4>
@@ -10,7 +11,7 @@
   {% else %}
   	<h4><b>Main<b></h4>
 	{% endif %}
-	</th>
+	-->
 	<th class="text-center"><h4><b>Rating</b><h4></th>
 	<!-- <th><h4><b>Secondaries</b></h4></th> -->
 </tr>
