--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -36,8 +36,8 @@
             <b>Secondaries:</b>
             {% if user.secondaries.all() %}
               {% for character in user.secondaries.all() %}
-                <a href="{{url_for("character", character=character)}}">{{character}}</a>
-                {% set character_name = character %}
+                <a href="{{url_for("character", character=character.name)}}">{{character.name}}</a>
+                {% set character_name = character.name %}
                 {% include "char_icon.html" %}
               {% endfor %}
             {% else %}
