--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -128,7 +128,7 @@
       </tbody>
     </table>
 
-    <!-- Navigating the paginated display -->
+    <!-- Navigating the paginated display (DISABLED)
     {% set next_page = page + 1 %}
     {% set prev_page = page - 1 %}
     <div class="text-center"><b>
@@ -140,6 +140,7 @@
 
       <a href="{{ url_for('user', tag=user.tag, page=next_page) }}">More Sets&gt;&gt;</a>
     </b></div>
+    -->
   </div>
 
   </div>
