general bugfixes, mobile navbar height extended, added 2014 national tournaments

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -58,7 +58,7 @@
             Players start at a base skill level <b>μ=25.0</b> with an uncertainty of <b>σ=8.3334</b>, which begins to deviate once set results are recorded.
 
             <li><h4><b>What are the difference between Global and Regional Rankings?</b></h4></li>
-            If you play someone from a different region than you, only your Global trueskill updates. However, if you play someone from a different region, both your Global and Regional trueskill update.
+            If you play someone from a different region than you, only your Global trueskill updates. However, if you play someone from the same region, both your Global and Regional trueskill update.
 
             <li><h4><b>How many sets per player are taken into rating?</b></h4>
             Currently, all sets a player has ever played. This is subject to change in the future, to the last (most recent) x number of sets.
@@ -83,7 +83,7 @@
         </li>
 
         <li><h4><b>There seems to be some missing information on the page. Can I help?</b></h4></li>
-          Yes! Only so much can be done through automation, so info like player's alternate tags, characters, and sometimes tournament's dates, and more need to be provided by the community. We can only automatically offer what we scrape from tournament brackets. Please tweet at us or contact us using our media links at the bottom of the page if you can offer any info!
+          Yes! Only so much can be done through automation, so info like player's alternate tags, characters, sometimes tournament's dates, and more need to be provided by the community. We can only automatically offer what we scrape from tournament brackets. Please tweet at us or contact us using our media links at the bottom of the page if you can offer any info!
           <ul>
             <li><h4><b>Why do some tournaments have bizzarre dates set years into the future?</b></h4></li>
             Because 20XX. Actually though, those dates are automatically entered if the program can't locate a date for a bracket automatically, so that the community can easily spot them and fix them with the correct info.
@@ -91,7 +91,7 @@
 
          <li>
           <h4><b>Why is my rating so low?</b></h4>
-          git gud kid. Also, consider that players who have played less than a handful of tournaments have skill ratings that tend to fluctuate more.
+          git gud kid. Also, consider that players who have only attended a few tournaments have skill ratings that tend to fluctuate more.
           <ul>
             <li><h4><b>Why is [set I played] from [tournament] not on this list?</b></h4></li>
               Your region may not be supported, or we probably don't have tournament data associated with that particular tournament. Rarely but possibly, there may have been a processing goof. Please report any errors you find via email or social media.
