Change printed references to User to Player

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -102,7 +102,7 @@
           </li>
           <li><a href="{{url_for('about')}}">About</a></li>
           <li><a href="{{url_for('browse_tournaments')}}">Tournaments</a></li>
-          <li><a href="{{url_for('browse_users')}}">Users</a></li>
+          <li><a href="{{url_for('browse_users')}}">Players</a></li>
           <li><a href="{{url_for('browse_characters')}}">Characters</a></li>
           <li><a href="{{url_for('head_to_head')}}">Head to Head</a></li>
           <li>
