--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -5,7 +5,7 @@
   <header class="jumbotron">
     <h1>Welcome to SmashStats!</h1>
     <p>
-      Smashstats tracks the stats of tournament-level players in the eSports Super Smash Bros. Melee scene. It parses data from tournament brackets and neatly presents selected statistics of tournament attendance, set records, and head to head histories between players. <a href="{{ url_for('about') }}"><b>Learn More</b></a>
+      Smashstats tracks the stats of tournament-level players in the Super Smash Bros. Melee scene. It parses data from tournament brackets and neatly presents selected statistics of tournament attendance, set records, and head to head histories between players. <a href="{{ url_for('about') }}"><b>Learn More</b></a>
     </p>
   </header>
 </div>
