--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -5,7 +5,7 @@
   <header class="jumbotron">
     <h1>About SmashStats</h1>
 
-    <p>The application recognizes and sorts players by tag and associates them with the sets and tournaments they have played in. Top players are remembered and all references to them are matched to their tag, without sponsor or team information. Currently, Smashstats only accepts bracket data from Challonge, meaning that no match information can be automatically generated. Additionally, no player information is automatically entered besides their tag and their set history; this information includes region, main, and secondary characters. </p>
+    <p>The application recognizes and sorts players by tag, and associates them with the sets and tournaments they have played in. Once players have been recorded in the database, the program attempts to match all references to them to their tag. Currently, Smashstats only accepts bracket data from Challonge, meaning that no match information can be automatically generated. Additionally, player information about regions, main, and secondary characters requires input from the larger community.</p>
 
     <p><b>In its current state, SmashStats does not claim to represent a fully comprehensive record of all players' set and tournament histories, but rather is a proof of concept for widespread stats tracking. The tournament database presently only contains data from the Final Brackets of all national or major tournaments that have happened in 2015.</b></p>
 
